fixed button overflow

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,3 +1,4 @@
 .buttonRow {
+  overflow-x: auto;
   white-space: nowrap;
 }
