--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -10,8 +10,6 @@
     to deal with it yet!
   */
   margin-bottom: 32px;
-
-  overflow-x: auto;
 }
 
 .title {
